@@ -5,6 +5,10 @@
           * geda_get_container_border_width
           * geda_get_widget_style
 
+    * src/widgets/geda_label.c: Utilize macro:
+
+          * geda_get_widget_style
+
 2020-02-13 Wiley E. Hill <wileyhill@gmail.com>
 
     * include/geda_gtk_compat.h: Cast gtk_widget_get_parent return pointer
